[gd_scene load_steps=2 format=3 uid="uid://c1fx16wmlo45w"]

[ext_resource type="Script" uid="uid://b8d78ru68agsm" path="res://pause_menu.gd" id="1_anjmw"]

[node name="Node2D" type="Node2D"]
process_mode = 3
z_index = 300
position = Vector2(656, 368)
script = ExtResource("1_anjmw")

[node name="Panel" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0.752941)
offset_left = -664.0
offset_top = -376.0
offset_right = 632.0
offset_bottom = 360.0

[node name="resume" type="Button" parent="Panel"]
z_index = 300
layout_mode = 0
offset_left = 528.0
offset_top = 136.0
offset_right = 800.0
offset_bottom = 208.0
theme_override_font_sizes/font_size = 40
text = "Back to game"

[node name="walktrough" type="Button" parent="Panel"]
z_index = 300
layout_mode = 0
offset_left = 528.0
offset_top = 256.0
offset_right = 800.0
offset_bottom = 328.0
theme_override_font_sizes/font_size = 40
text = "Walktrough"

[node name="quit" type="Button" parent="Panel"]
z_index = 300
layout_mode = 0
offset_left = 528.0
offset_top = 376.0
offset_right = 799.0
offset_bottom = 448.0
theme_override_font_sizes/font_size = 40
text = "Back to menu"

[connection signal="pressed" from="Panel/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Panel/walktrough" to="." method="_on_walktrough_pressed"]
[connection signal="pressed" from="Panel/quit" to="." method="_on_quit_pressed"]
